--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ Welcome to the original Famous BMI Calculator where you can find out your own BM
 
 <p id="queryType">Enter height and weight</p>
 
-<p id="heightBox">Enter height in feet and inches</p>
-<p id="heightBox">Enter weight in pounds</p>
+<p id="heightBox">Enter height in feet and inches <input type="text" name="feet"> feet <input type="text" name="inches"> inches</p>
+<p id="weightBox">Enter weight in pounds <input type="text" name="pounds"> pounds </p>
 
 <button type="button"
 onclick=""
